--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Monument";
+  src: local("Monument"),
+  url('../src/fonts/MonumentExtended-Regular.otf') format("truetype");
+  /* D:\software_sprint1\smart_attendaance_sprint1_dashboard\src\fonts\MonumentExtended-Regular.otf */
+  font-weight: 4px;
+  } 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*{
+  padding: 0%;
+  margin: 0%;
+  font-family: "Monument";
 }
